# ftune

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
benchmarks/: benchmark.py  run_all.sh  setup.sh  summarize.py
benchmarks/jobs/: llama8b_lora_a100.sh  llama8b_qlora_a100.sh  llama8b_qlora_alllinear_a100.sh  mistral7b_qlora_v100.sh  phi3_qlora_v100.sh
examples/: basic_memory.py  full_estimate.py  validate.py
src/ftune/: __init__.py  __main__.py  app.py  calibration.py  estimator.py  hub.py  loader.py  optimizer.py  validation.py
src/ftune/cli/: app.py  display.py
src/ftune/core/: cost.py  memory.py  models.py  time.py
src/ftune/data/: pricing.yaml
src/ftune/utils/: __init__.py  formatting.py
src/ftuneai/: __init__.py  __main__.py  app.py  calibration.py  estimator.py  hub.py  loader.py  optimizer.py  validation.py
src/ftuneai/cli/: __init__.py  app.py  display.py
src/ftuneai/core/: __init__.py  cost.py  memory.py  models.py  time.py
src/ftuneai/data/: gpus.yaml  models.yaml
tests/: conftest.py  test_cost.py  test_hub.py  test_memory.py  test_optimizer.py  test_time.py  test_validation.py
